# dv-pari

./: .gitignore  Cargo.toml  README.md
.github/workflows/: zizmor.yml
docs/: public_input.md  r1cs_prover.md  srs_proof.md
src/: artifacts.rs  curve.rs  dvsnark.rs  dvsnark_test.rs  ec_fft.rs  gnark_r1cs.rs  io_utils.rs  lib.rs  proving.rs  srs.rs  srs_proof.rs  tree_io.rs
