[package]
name = "dv-pari" # CHANGEME
version = "0.0.0" # CHANGEME
edition = "2024" # CHANGEME
authors = [
  "John Doe <noreply@alpenlabs.io>",  # CHANGEME
  "Janet Doe <noreply@alpenlabs.io>", # CHANGEME
]
description = "Alpen Rust Template" # CHANGEME
license = "MIT OR Apache-2.0" # CHANGEME
readme = "README.md"
repository = "https://github.com/alpenlabs/rust-template" # CHANGEME
categories = ["cryptography::cryptocurrencies"] # CHANGEME
keywords = ["crypto", "bitcoin"] # CHANGEME

[lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rust.unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage, coverage_nightly)',
] }
rust.missing_docs = "warn"
rustdoc.all = "warn"
clippy.too_long_first_doc_paragraph = "warn"

[features]

[dependencies]
ark-std = { version = "0.5.0", default-features = false, features = ["print-trace"] }
ark-serialize = { version = "0.5.0", features = ["parallel"] }
ark-poly = { version = "0.5.0", features = ["parallel"] }
ark-ff = { version = "0.5.0", features = ["parallel"] }
num-bigint = "0.4.6"
byteorder = "1.5.0"
anyhow = "1.0"
rayon = "1.10.0" 
memmap2 = "0.9.5"
xs233-sys = "=0.2.0"
ecfft = { git = "https://github.com/alpenlabs/ecfft", rev = "9c6cac7" }
blake3 = "1.8.0"

[dev-dependencies]
num-traits = "0.2"
rand_chacha = "0.3.1"

[profile.release]
opt-level = "z"   # Optimized for size, use 3 for speed
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
strip = "symbols" # Strip symbols from binary
