[package]
name = "dv-pari" 
version = "0.1.0" 
edition = "2024" 
authors = []
description = "Rust implementation of the DV-Pari SNARK over sect233k1"
license = "MIT OR Apache-2.0" 
readme = "README.md"
repository = "https://github.com/alpenlabs/dv-pari" 
categories = ["cryptography::cryptocurrencies"] 
keywords = ["crypto", "bitcoin", "glock"] 

[lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rust.unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage, coverage_nightly)',
] }
rust.missing_docs = "warn"
rustdoc.all = "warn"
clippy.too_long_first_doc_paragraph = "warn"

[features]

[dependencies]
ark-std = { version = "0.5.0", default-features = false, features = ["print-trace"] }
ark-serialize = { version = "0.5.0", features = ["parallel"] }
ark-poly = { version = "0.5.0", features = ["parallel"] }
ark-ff = { version = "0.5.0", features = ["parallel"] }
num-bigint = "0.4.6"
byteorder = "1.5.0"
anyhow = "1.0"
rayon = "1.10.0" 
memmap2 = "0.9.5"
xs233-sys = "=0.2.0"
ecfft = { git = "https://github.com/alpenlabs/ecfft", rev = "9c6cac7" }
blake3 = "1.8.0"

[dev-dependencies]
rand_chacha = "0.3.1"

[profile.release]
opt-level = "z"   # Optimized for size, use 3 for speed
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
strip = "symbols" # Strip symbols from binary
